--- a/CarCompanion/app/src/main/res/values/colors.xml
+++ b/CarCompanion/app/src/main/res/values/colors.xml
@@ -19,5 +19,5 @@
     <color name="verdigris">#53A2A1</color>
     <color name="celadon">#8AD6B5</color>
     <color name="french_gray">#D0CCD0</color>
-    <color name="pearl">#FBFCFF</color>
+    <color name="platinum">#E6E4E8</color>
 </resources>
