--- a/CarCompanion/app/src/main/res/values-night/themes.xml
+++ b/CarCompanion/app/src/main/res/values-night/themes.xml
@@ -2,13 +2,13 @@
     <!-- Base application theme. -->
     <style name="Theme.CarCompanion" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_200</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
-        <item name="colorOnPrimary">@color/black</item>
+        <item name="colorPrimary">@color/celadon</item>
+        <item name="colorPrimaryVariant">@color/cerulean</item>
+        <item name="colorOnPrimary">@color/charcoal</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorSecondaryVariant">@color/teal_200</item>
-        <item name="colorOnSecondary">@color/black</item>
+        <item name="colorSecondary">@color/verdigris</item>
+        <item name="colorSecondaryVariant">@color/celadon</item>
+        <item name="colorOnSecondary">@color/charcoal</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
