--- a/CarCompanion/app/src/main/res/layout/activity_main.xml
+++ b/CarCompanion/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,18 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <androidx.appcompat.widget.Toolbar
+<!--    <androidx.appcompat.widget.Toolbar-->
+<!--        android:id="@+id/toolbar"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="?attr/actionBarSize"-->
+<!--        android:background="@color/charcoal"-->
+<!--        app:popupTheme="@style/Theme.CarCompanion.AppBarOverlay"-->
+<!--        app:layout_constraintTop_toTopOf="@+id/activity_main"-->
+<!--        app:titleTextColor="@color/platinum"-->
+<!--        app:subtitleTextColor="@color/french_gray"-->
+<!--        />-->
+
+    <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
