--- a/CarCompanion/app/src/main/res/layout/activity_welcome.xml
+++ b/CarCompanion/app/src/main/res/layout/activity_welcome.xml
@@ -17,6 +17,7 @@
         android:textAlignment="center"
         android:layout_marginTop="150dp"
         android:layout_marginBottom="50dp"
+        android:textColor="@color/charcoal"
         />
 
     <Button
@@ -28,9 +29,18 @@
 
     <Button
         style="@style/WelcomeButtons"
+        android:id="@+id/btn_signup"
+        android:layout_below="@id/btn_login"
+        android:text="@string/signup"
+        android:backgroundTint="@color/seafoam"
+        />
+
+    <Button
+        style="@style/WelcomeButtons"
         android:id="@+id/btn_guest"
-        android:layout_below="@+id/btn_login"
+        android:layout_below="@+id/btn_signup"
         android:text="@string/use_as_guest"
+        android:backgroundTint="@color/seafoam"
         />
 
 </RelativeLayout>
