--- a/CarCompanion/app/src/main/res/values/themes.xml
+++ b/CarCompanion/app/src/main/res/values/themes.xml
@@ -18,7 +18,11 @@
     <style name="WelcomeButtons">
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_margin">20dp</item>
+        <item name="android:layout_marginLeft">20dp</item>
+        <item name="android:layout_marginRight">20dp</item>
+        <item name="android:layout_marginTop">10dp</item>
+        <item name="android:layout_marginBottom">10dp</item>
+        <item name="android:textSize">20sp</item>
     </style>
     <style name="CarSpecificLabels">
         <item name="android:layout_width">wrap_content</item>
