--- a/app/src/main/res/layout/fragment_troubleshooting.xml
+++ b/app/src/main/res/layout/fragment_troubleshooting.xml
@@ -38,41 +38,54 @@
 
     </androidx.recyclerview.widget.RecyclerView>
 
-    <Button
-        android:id="@+id/back_step_button"
-        android:layout_width="wrap_content"
-        android:layout_height="60dp"
-        android:text="@string/back_step"
-        android:backgroundTint="@color/darkest_blue"
-        android:textColor="@color/white"
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_below="@id/troubleshooting_recycler"
         android:layout_centerHorizontal="true"
-        android:layout_toLeftOf="@id/restart_button"
+        android:orientation="horizontal"
         android:layout_marginVertical="50dp"
-        />
+        android:weightSum="3"
+        >
 
-    <Button
-        android:id="@+id/restart_button"
-        android:layout_width="wrap_content"
-        android:layout_height="60dp"
-        android:layout_centerHorizontal="true"
-        android:layout_marginVertical="50dp"
-        android:layout_below="@id/troubleshooting_recycler"
-        android:backgroundTint="@color/darkest_blue"
-        android:text="@string/restart_step"
-        android:textColor="@color/white" />
+        <Button
+            android:id="@+id/back_step_button"
+            android:layout_width="wrap_content"
+            android:layout_height="60dp"
+            android:text="@string/back_step"
+            android:backgroundTint="@color/seafoam"
+            android:textColor="@color/white"
+            android:layout_weight="1"
+            android:layout_marginRight="10dp"
+            android:layout_marginLeft="10dp"
+            />
 
-    <Button
-        android:id="@+id/next_step_button"
-        android:layout_width="wrap_content"
-        android:layout_height="60dp"
-        android:layout_below="@id/troubleshooting_recycler"
-        android:layout_centerHorizontal="true"
-        android:layout_marginVertical="50dp"
-        android:layout_marginBottom="137dp"
-        android:layout_toRightOf="@id/restart_button"
-        android:backgroundTint="@color/darkest_blue"
-        android:text="@string/next_step"
-        android:textColor="@color/white" />
+        <Button
+            android:id="@+id/restart_button"
+            android:layout_width="wrap_content"
+            android:layout_height="60dp"
+            android:layout_centerHorizontal="true"
+            android:backgroundTint="@color/seafoam"
+            android:text="@string/restart_step"
+            android:textColor="@color/white"
+            android:layout_marginRight="10dp"
+            android:layout_marginLeft="10dp"
+            android:layout_weight="1"/>
+
+        <Button
+            android:id="@+id/next_step_button"
+            android:layout_width="wrap_content"
+            android:layout_height="60dp"
+            android:layout_below="@id/troubleshooting_recycler"
+            android:layout_centerHorizontal="true"
+            android:backgroundTint="@color/seafoam"
+            android:text="@string/next_step"
+            android:textColor="@color/white"
+            android:layout_marginRight="10dp"
+            android:layout_marginLeft="10dp"
+            android:layout_weight="1" />
+
+    </LinearLayout>
+
 
 </RelativeLayout>
