--- a/app/src/main/res/layout/fragment_edit_car.xml
+++ b/app/src/main/res/layout/fragment_edit_car.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/add_title"
+        android:id="@+id/edit_page_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Add a Car"
@@ -18,12 +18,12 @@
         android:id="@+id/nick_label_add"
         style="@style/CarAddLabels"
         android:text="@string/nickname"
-        android:layout_below="@id/add_title"/>
+        android:layout_below="@id/edit_page_title"/>
 
     <EditText
         android:id="@+id/car_nickname_et"
         style="@style/CarAddTexts"
-        android:layout_below="@id/add_title"/>
+        android:layout_below="@id/edit_page_title"/>
 
     <TextView
         android:id="@+id/car_year_label_add"
@@ -61,7 +61,7 @@
 
 
     <Button
-        android:id="@+id/btn_add_car"
+        android:id="@+id/btn_save_changes"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/car_model_et"
@@ -69,7 +69,7 @@
         android:layout_marginTop="30dp"
         android:layout_marginEnd="30dp"
         android:layout_marginBottom="30dp"
-        android:text="Save New Car"
+        android:text="Save Changes"
         android:textSize="20sp" />
 
 </RelativeLayout>
