--- a/app/src/main/res/layout/cardview_car_detail.xml
+++ b/app/src/main/res/layout/cardview_car_detail.xml
@@ -3,7 +3,11 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_marginVertical="3dp"
+    android:layout_marginHorizontal="3dp"
+    android:backgroundTint="@color/seafoam"
+    app:cardCornerRadius="10dp">
 
    <RelativeLayout
        android:layout_width="match_parent"
@@ -16,6 +20,7 @@
             android:text="@string/nickname"
             android:layout_toRightOf="@id/car_img"
             android:textSize="30sp"
+            android:textColor="@color/french_gray"
             android:layout_marginTop="30dp"
             android:layout_marginBottom="20dp"
             />
@@ -27,6 +32,7 @@
             android:text="@string/ymm"
             android:layout_toRightOf="@+id/car_img"
             android:textSize="20sp"
+            android:textColor="@color/french_gray"
             android:layout_below="@id/car_nick_txt"/>
 
         <ImageView
