--- a/app/src/main/res/layout/row_view_trouble.xml
+++ b/app/src/main/res/layout/row_view_trouble.xml
@@ -1,17 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="4dp"
-    card_view:cardCornerRadius="8dp">
+    android:layout_marginHorizontal="10dp"
+    android:layout_marginVertical="5dp"
+    card_view:cardCornerRadius="10dp"
+    >
 
-    <TextView
-        android:padding="10dp"
-        android:textSize="18sp"
-        android:id="@+id/trouble_name_text_view"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/trouble_view_layout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textStyle="bold" />
+        android:layout_height="50dp"
+        android:background="@color/verdigris">
+
+        <TextView
+            android:id="@+id/trouble_name_text_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:autoSizeTextType="uniform"
+            android:text="@string/sample_symptom_string"
+            android:textColor="@color/white"
+            android:textSize="18dp"
+            android:textStyle="bold"
+            card_view:layout_constraintBottom_toBottomOf="parent"
+            card_view:layout_constraintEnd_toStartOf="@+id/trouble_radio_button"
+            card_view:layout_constraintHorizontal_bias="0.5"
+            card_view:layout_constraintStart_toStartOf="parent"
+            card_view:layout_constraintTop_toTopOf="parent"
+            card_view:layout_constraintVertical_bias="0.5" />
+
+        <RadioButton
+            android:id="@+id/trouble_radio_button"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:checked="false"
+            android:textColor="@color/seafoam"
+            android:layout_marginRight="5dp"
+            card_view:layout_constraintBottom_toBottomOf="parent"
+            card_view:layout_constraintRight_toRightOf="@id/trouble_view_layout"
+            card_view:layout_constraintTop_toTopOf="parent"
+            card_view:layout_constraintVertical_bias="0.5"
+            />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
 
 </androidx.cardview.widget.CardView>
