--- a/app/src/main/res/layout/fragment_troubleshooting.xml
+++ b/app/src/main/res/layout/fragment_troubleshooting.xml
@@ -9,10 +9,14 @@
         android:id="@+id/troubleshooting_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/troubleshooting_mode"
-        android:textSize="24sp"
-        android:layout_margin="30dp"
         android:layout_centerHorizontal="true"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="30dp"
+        android:layout_marginEnd="30dp"
+        android:layout_marginBottom="10dp"
+        android:text="@string/let_s_narrow_it_down"
+        android:textColor="@color/charcoal"
+        android:textSize="24sp"
         tools:layout_editor_absoluteX="176dp"
         tools:layout_editor_absoluteY="118dp" />
 
@@ -20,31 +24,37 @@
         android:id="@+id/current_troubleshooting_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="@color/seafoam"
-        android:text="@string/init_trouble_title"
+        android:layout_alignLeft="@id/troubleshooting_title"
+        android:layout_alignRight="@id/troubleshooting_title"
+        android:textColor="@color/charcoal"
+        android:text="@string/what_other_symptoms"
+        android:autoSizeTextType="uniform"
         android:gravity="center"
         android:layout_centerHorizontal="true"
-        android:textSize="24sp"
+        android:textSize="18dp"
         android:layout_below="@+id/troubleshooting_title"
+        android:layout_marginBottom="20dp"
         />
 
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
-        android:layout_height="300dp"
+        android:layout_height="400dp"
         android:layout_below="@id/current_troubleshooting_title"
         android:id="@+id/troubleshooting_recycler"
         >
 
 
+
     </androidx.recyclerview.widget.RecyclerView>
 
     <LinearLayout
+        android:id="@+id/button_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/troubleshooting_recycler"
         android:layout_centerHorizontal="true"
         android:orientation="horizontal"
-        android:layout_marginVertical="50dp"
+        android:layout_marginTop="50dp"
         android:weightSum="3"
         >
 
@@ -86,6 +96,17 @@
             android:layout_weight="1" />
 
     </LinearLayout>
+
+    <Button
+        android:id="@+id/view_diagnosis_list"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/view_diagnosis_list"
+        android:layout_below="@id/button_layout"
+        android:backgroundTint="@color/celadon"
+        android:textColor="@color/white"
+        android:layout_centerHorizontal="true"
+        />
 
 
 </RelativeLayout>
