--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,7 +17,7 @@
     <color name="charcoal">#274156</color>
     <color name="cerulean">#1C6E8C</color>
     <color name="verdigris">#53A2A1</color>
-    <color name="celadon">#8AD6B5</color>
+    <color name="celadon">#3ADD96</color>
     <color name="french_gray">#D0CCD0</color>
     <color name="platinum">#E6E4E8</color>
 </resources>
