--- a/app/src/main/res/layout/row_view_trouble.xml
+++ b/app/src/main/res/layout/row_view_trouble.xml
@@ -48,6 +48,22 @@
             android:background="@null"
             />
 
+        <RadioButton
+            android:id="@+id/trouble_radio_button"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:checked="false"
+            android:textColor="@color/seafoam"
+            android:layout_marginRight="5dp"
+            card_view:layout_constraintBottom_toBottomOf="parent"
+            card_view:layout_constraintRight_toRightOf="@id/trouble_view_layout"
+            card_view:layout_constraintTop_toTopOf="parent"
+            card_view:layout_constraintVertical_bias="0.5"
+            />
+
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.cardview.widget.CardView>
