--- a/app/src/main/res/layout/fragment_diagnosis_details.xml
+++ b/app/src/main/res/layout/fragment_diagnosis_details.xml
@@ -25,9 +25,8 @@
     <ScrollView
         android:id="@+id/scrollView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="450dp"
         android:layout_gravity="center_horizontal"
-        android:minHeight="400dp"
         android:layout_margin="10dp"
         android:padding="5dp"
         >
@@ -51,6 +50,7 @@
         android:backgroundTint="@color/cerulean"
         android:textColor="@color/white"
         android:layout_centerHorizontal="true"
+        android:layout_marginVertical="10dp"
         android:textAlignment="center"
         android:textAllCaps="true"
         android:textSize="18sp"
