--- a/app/src/main/res/layout/row_view_trouble.xml
+++ b/app/src/main/res/layout/row_view_trouble.xml
@@ -8,12 +8,12 @@
     android:layout_marginVertical="5dp"
     card_view:cardCornerRadius="10dp"
     android:id="@+id/trouble_card_view"
-    android:backgroundTint="@color/cerulean"
     >
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/trouble_view_layout"
         android:layout_width="match_parent"
+        android:background="@color/cerulean"
         android:layout_height="50dp"
         >
 
