Completely done touching code and UI

--- a/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -1,13 +1,15 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="108dp"
     android:height="108dp"
-    android:viewportWidth="108"
-    android:viewportHeight="108"
-    android:tint="#1920C8">
-  <group android:scaleX="1.35"
-      android:scaleY="1.35"
-      android:translateX="37.8"
-      android:translateY="37.8">
-      <path android:fillColor="@android:color/white" android:pathData="M16.22,12c0.68,0 1.22,-0.54 1.22,-1.22c0,-0.67 -0.54,-1.22 -1.22,-1.22S15,10.11 15,10.78C15,11.46 15.55,12 16.22,12zM6.56,10.78c0,0.67 0.54,1.22 1.22,1.22S9,11.46 9,10.78c0,-0.67 -0.54,-1.22 -1.22,-1.22S6.56,10.11 6.56,10.78zM7.61,4L6.28,8h11.43l-1.33,-4H7.61zM16.28,3c0,0 0.54,0.01 0.92,0.54c0.02,0.02 0.03,0.04 0.05,0.07c0.07,0.11 0.14,0.24 0.19,0.4C17.66,4.66 19,8.69 19,8.69v6.5c0,0.45 -0.35,0.81 -0.78,0.81h-0.44C17.35,16 17,15.64 17,15.19V14H7v1.19C7,15.64 6.65,16 6.22,16H5.78C5.35,16 5,15.64 5,15.19v-6.5c0,0 1.34,-4.02 1.55,-4.69c0.05,-0.16 0.12,-0.28 0.19,-0.4C6.77,3.58 6.78,3.56 6.8,3.54C7.18,3.01 7.72,3 7.72,3H16.28zM4,17.01h16V19h-7v3h-2v-3H4V17.01z"/>
+    android:viewportWidth="24"
+    android:viewportHeight="24"
+    android:tint="#5C9C96">
+  <group android:scaleX="0.5046"
+      android:scaleY="0.5046"
+      android:translateX="5.9448"
+      android:translateY="5.9448">
+    <path
+        android:fillColor="@android:color/white"
+        android:pathData="M18,1c-2.76,0 -5,2.24 -5,5s2.24,5 5,5s5,-2.24 5,-5S20.76,1 18,1zM18.5,7h-1V3h1V7zM18.5,8v1h-1V8H18.5zM6,13.5C6,12.67 6.67,12 7.5,12S9,12.67 9,13.5S8.33,15 7.5,15S6,14.33 6,13.5zM19,12.93c0.65,-0.09 1.34,-0.28 2,-0.6h0V19c0,0.55 -0.45,1 -1,1h-1c-0.55,0 -1,-0.45 -1,-1v-1H6v1c0,0.55 -0.45,1 -1,1H4c-0.55,0 -1,-0.45 -1,-1v-8l2.08,-5.99C5.29,4.42 5.84,4 6.5,4l4.79,0C11.1,4.63 11,5.31 11,6H6.85L5.81,9h5.86v0c0.36,0.75 0.84,1.43 1.43,2L5,11v5h14L19,12.93zM17.91,13c-0.89,-0.01 -1.74,-0.19 -2.53,-0.51C15.15,12.76 15,13.11 15,13.5c0,0.83 0.67,1.5 1.5,1.5s1.5,-0.67 1.5,-1.5C18,13.32 17.97,13.16 17.91,13z"/>
   </group>
 </vector>
