--- a/app/src/main/res/layout/cardview_car_detail.xml
+++ b/app/src/main/res/layout/cardview_car_detail.xml
@@ -4,9 +4,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginVertical="3dp"
-    android:layout_marginHorizontal="3dp"
-    android:backgroundTint="@color/seafoam"
+    android:layout_marginVertical="10dp"
+    android:layout_marginHorizontal="10dp"
+    android:backgroundTint="@color/verdigris"
     app:cardCornerRadius="10dp">
 
    <RelativeLayout
@@ -20,9 +20,9 @@
             android:text="@string/nickname"
             android:layout_toRightOf="@id/car_img"
             android:textSize="30sp"
-            android:textColor="@color/french_gray"
-            android:layout_marginTop="30dp"
-            android:layout_marginBottom="20dp"
+            android:textColor="@color/white"
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="10dp"
             />
 
         <TextView
@@ -32,15 +32,18 @@
             android:text="@string/ymm"
             android:layout_toRightOf="@+id/car_img"
             android:textSize="20sp"
-            android:textColor="@color/french_gray"
+            android:textColor="@color/white"
             android:layout_below="@id/car_nick_txt"/>
 
-        <ImageView
-            android:id="@+id/car_img"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:layout_margin="20dp"
-            app:srcCompat="@drawable/ic_baseline_directions_car_24" />
+       <ImageView
+           android:id="@+id/car_img"
+           android:layout_width="100dp"
+           android:layout_height="100dp"
+           android:layout_marginStart="20dp"
+           android:layout_marginTop="10dp"
+           android:layout_marginEnd="20dp"
+           android:layout_marginBottom="10dp"
+           app:srcCompat="@drawable/ic_baseline_directions_car_24" />
 
    </RelativeLayout>
 </androidx.cardview.widget.CardView>
